--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Journal</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
   </head>
   <body>
     <div id="app"></div>
   </body>
-  <script type="text/javascript" src="app.jsx"></script>
+  <script src="bundle.js"></script>
 </html>
