--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Journal</title>
     <link rel="stylesheet" href="styles/css/styles.css" />
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css" />
   </head>
   <body>
     <div id="app"></div>
+    <script src="build/bundle.js"></script>
   </body>
-  <script src="build/bundle.js"></script>
 </html>
