--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Journal</title>
-    <link rel="stylesheet" href="styles/css/styles.css" />
+    <title>Journey</title>
+    <link rel="stylesheet" href="styles/css/main.min.css" />
     <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="build/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
