Implement memory palace prototype

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/scripts/jquery/dist/jquery.min.js"></script>
+    <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/scripts/three/build/three.min.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
