--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Journey</title>
-    <link rel="stylesheet" href="styles/css/main.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:300">
     <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/css/main.min.css" />
   </head>
   <body>
     <div id="app"></div>
