--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
     <script src="/scripts/jquery/dist/jquery.min.js"></script>
     <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/scripts/d3/build/d3.min.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
