--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
     <script src="/scripts/jquery/dist/jquery.min.js"></script>
     <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/scripts/d3/d3.min.js"></script>
+    <script src="/scripts/moment/moment.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
