--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,9 @@
     <script src="/scripts/jquery/dist/jquery.min.js"></script>
     <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/scripts/d3/d3.min.js"></script>
+    <script src="/scripts/d3-cloud/build/d3.layout.cloud.js"></script>
     <script src="/scripts/moment/moment.js"></script>
     <script src="/scripts/moment-range/dist/moment-range.min.js"></script>
-    <!-- <script src="https://unpkg.com/recharts/umd/Recharts.min.js"></script> -->
     <script src="bundle.js"></script>
   </body>
 </html>
