--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,14 @@
     <title>Journey</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:300">
     <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/scripts/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css">
     <link rel="stylesheet" href="/styles/css/main.min.css" />
   </head>
   <body>
     <div id="app"></div>
     <script src="/scripts/jquery/dist/jquery.min.js"></script>
     <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/scripts/jquery/dist/jquery.min.js"></script>
+    <script src="/scripts/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
