--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
     <script src="/scripts/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <script src="/scripts/d3/d3.min.js"></script>
     <script src="/scripts/d3-cloud/build/d3.layout.cloud.js"></script>
-    <script src="/scripts/moment/moment.js"></script>
-    <script src="/scripts/moment-range/dist/moment-range.min.js"></script>
+    <!-- <script src="/scripts/moment/moment.js"></script> -->
+    <!-- <script src="/scripts/moment-range/dist/moment-range.min.js"></script> not sure if we need this -->
     <script src="bundle.js"></script>
   </body>
 </html>
