--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,6 @@
     <script src="/scripts/d3-cloud/build/d3.layout.cloud.js"></script>
     <!-- <script src="/scripts/moment/moment.js"></script> -->
     <!-- <script src="/scripts/moment-range/dist/moment-range.min.js"></script> not sure if we need this -->
-    <script src="bundle.js"></script>
+    <script src="/assets/bundle.js"></script>
   </body>
 </html>
